--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,4 +1,4 @@
-*{
+* {
   transition: all var(--transition-duration) ease;
   margin: 0;
   padding: 0;
@@ -8,16 +8,10 @@
   transform: translateY(-100%);
 }
 
-
-
-
-
-
-
 .header {
   position: fixed;
   transition: transform 0.3s ease;
-  width: 100dvw;
+  width: 100%;
   padding: 1rem 1.5rem;
   background: var(--color-primary);
   min-height: 3.25rem;
@@ -65,7 +59,8 @@
 }
 
 #menu-toggle:checked + .menu-icon .bar:nth-child(1) {
-  transform: rotate(45deg) translate(0.5rem, 0.5rem}
+  transform: rotate(45deg) translate(0.5rem, 0.5rem);
+}
 
 #menu-toggle:checked + .menu-icon .bar:nth-child(2) {
   opacity: 0;
@@ -78,6 +73,6 @@
   transition: 0.4s;
 }
 
-#menu-toggle:checked + .menu-icon .bar:nth-child(3) {
+/* #menu-toggle:checked + .menu-icon .bar:nth-child(3) {
   transform: rotate(-45deg) translate(0.5rem, -0.5rem);
-}
+} */
